# pygitr

./: .gitignore  CONTRIBUTE.md  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: deploy-release.yml  python-package.yml  test-deploy.yml
docs/: autodoc.rst  conf.py  index.rst
docs/_static/src/behavioral_diagrams/: ActivityDiagram.puml
docs/source/: conf.py  index.rst  modules.rst  pygitr.rst  pygitter.rst  usage.rst
src/pygitr/: Repo.py
tests/: test_Repo.py  test_fixtures.py
tests/integration/: test_integration.py
