[metadata]
name = pygitr
version = 1.0.0
author = Mina Ghobrial
author_email = minamaged113@gmail.com
description = A python wrapper for git repositories
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/minamaged113/pygitr
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src